// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QuestionBank converter oboToSlate converts an OboNode to a Slate node 1`] = `
Object {
  "data": Object {
    "content": Object {
      "choose": null,
      "triggers": "mock-triggers",
    },
  },
  "nodes": Array [
    Object {
      "data": Object {
        "content": Object {
          "choose": 1,
          "chooseAll": true,
          "triggers": "mock-triggers",
        },
      },
      "isVoid": true,
      "object": "block",
      "type": "ObojoboDraft.Chunks.QuestionBank.Settings",
    },
    Object {
      "data": Object {
        "content": Object {
          "choose": 1,
        },
      },
      "nodes": Array [
        Object {
          "data": Object {
            "content": Object {
              "choose": 1,
              "chooseAll": false,
            },
          },
          "isVoid": true,
          "object": "block",
          "type": "ObojoboDraft.Chunks.QuestionBank.Settings",
        },
        undefined,
      ],
      "object": "block",
      "type": "ObojoboDraft.Chunks.QuestionBank",
    },
    undefined,
  ],
  "object": "block",
  "type": "mockType",
}
`;

exports[`QuestionBank converter slateToObo converts a Slate node to an OboNode with content 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "content": undefined,
      "id": "mockKey",
      "type": "ObojoboDraft.Chunks.QuestionBank",
    },
    undefined,
  ],
  "content": Object {
    "choose": Infinity,
    "chooseAll": true,
  },
  "id": "mockKey",
  "type": "mockType",
}
`;

exports[`QuestionBank converter slateToObo converts a Slate node to an OboNode without content 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "content": undefined,
      "id": "mockKey",
      "type": "ObojoboDraft.Chunks.QuestionBank",
    },
    undefined,
  ],
  "content": Object {},
  "id": "mockKey",
  "type": "mockType",
}
`;
